// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extension special characters in page registrations renders 1`] = `
<div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
    />
    <div
      class="rightSide"
    />
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;

exports[`extension special characters in page registrations when navigating to route with ID having special characters renders 1`] = `
<div>
  <div
    class="StatusBar"
  >
    <div
      class="leftSide"
    />
    <div
      class="rightSide"
    />
  </div>
  <div>
    Some page
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;
